-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
If we have unknown config parameter in llog then it fails the target mounting.
Steps to re-create it are as :
$>sh llmount.sh $>export NOFORMAT=yes $>for OST in $(lctl get_param mgs.MGS.live.lustre | grep OST); do echo "max_rpcs_in_flight=50 on $OST" ; lctl conf_param $OST.ost.max_rpcs_in_flight=50 ; done <--- Note here ost.max.. is mention instead of osc.max.. $>sh llmountcleanup.sh $>sh llmount.sh <------- this hangs, as ost is not avilable
- is related to
-
LU-8066 Move lustre procfs handling to sysfs and debugfs.
-
- Open
-