lustre/osd-ldiskfs/osd_handler.c
@@ -7209,10 +7209,13 @@ static int osd_process_config(const struct lu_env *env,
 		LASSERT(&o->od_dt_dev);
 		rc = class_process_proc_param(PARAM_OSD, lprocfs_osd_obd_vars,
 					      cfg, &o->od_dt_dev);
-		if (rc > 0 || rc == -ENOSYS)
+		if (rc > 0 || rc == -ENOSYS) {
 			rc = class_process_proc_param(PARAM_OST,
 						      lprocfs_osd_obd_vars,
 						      cfg, &o->od_dt_dev);
+			if (rc > 0)
+				rc = 0;
+		}
 		break;
 	default:
 		rc = -ENOSYS;
